refactor: updating logic and reducing boilerplate